Fix cache bugs (#25)
* Updating bulk downloads

* make cache optional

* fix cache for images

* make cache optional

* Merge pull request #24 from austinbspencer/gallery-switch

* move lightbox to separate folder

* switch gallery to mui

* ignore img

* add image quality env

* switch to pnpm

* update docs

* add cache env var
